# extraction-validation-engine

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/src/api/: __init__.py  routes.py
backend/src/core/: __init__.py  config.py  database.py
backend/src/models/: __init__.py  schemas.py
backend/src/services/: __init__.py  aci_validator.py  gemini_extractor.py  geometry_calculator.py
docs/: project-definition-and-architectural-blueprint.md
docs/research/: 3d-reinforced-concrete-modeling-libraries.md  aci-318-defaults-for-3d-modeling.md  aec-data-extraction-and-visualization.md  ezdxf-vs-maker-js.md  fragments-vs-bitbybit-dev-comparison.md  python-for-web-nurbs-visualization.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: EditForm.css  EditForm.jsx  ImageUpload.css  ImageUpload.jsx  Viewer3D.css  Viewer3D.jsx
frontend/src/services/: api.js
frontend/src/store/: useExtractionStore.js
notebooks/: Gemini_3_Column_original.ipynb
